@@ -1,19 +1,17 @@
 package io.github.steaf23.bingoreloaded.gui.creator;
 
-import io.github.steaf23.bingoreloaded.data.BingoCardsData;
+import io.github.steaf23.bingoreloaded.data.BingoCardData;
 import io.github.steaf23.bingoreloaded.gui.base.FilterType;
 import io.github.steaf23.bingoreloaded.gui.base.MenuItem;
-import io.github.steaf23.bingoreloaded.gui.base.MenuInventory;
-import io.github.steaf23.bingoreloaded.gui.base.PaginatedPickerMenu;
+import io.github.steaf23.bingoreloaded.gui.base.MenuManager;
+import io.github.steaf23.bingoreloaded.gui.base.PaginatedSelectionMenu;
 import io.github.steaf23.bingoreloaded.item.ItemText;
 import io.github.steaf23.bingoreloaded.tasks.BingoTask;
 import io.github.steaf23.bingoreloaded.tasks.CountableTask;
 import io.github.steaf23.bingoreloaded.tasks.TaskData;
 import net.md_5.bungee.api.ChatColor;
-import org.bukkit.entity.Player;
+import org.bukkit.entity.HumanEntity;
 import org.bukkit.event.inventory.InventoryClickEvent;
-import org.bukkit.event.inventory.InventoryCloseEvent;
-import org.bukkit.event.inventory.InventoryOpenEvent;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.ArrayList;
@@ -22,25 +20,22 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-public class TaskPickerUI extends PaginatedPickerMenu
+public class TaskPickerMenu extends PaginatedSelectionMenu
 {
     private final String listName;
 
     protected static final ItemText[] SELECTED_LORE = createSelectedLore();
     protected static final ItemText[] UNSELECTED_LORE = createUnselectedLore();
 
-    public TaskPickerUI(List<BingoTask> options, String title, MenuInventory parent, String listName)
-    {
-        super(asPickerItems(options), title, parent, FilterType.DISPLAY_NAME);
+    public TaskPickerMenu(MenuManager manager, String title, List<BingoTask> options, String listName) {
+        super(manager, title, asPickerItems(options), FilterType.DISPLAY_NAME);
         this.listName = listName;
         this.setMaxStackSizeOverride(64);
     }
 
     @Override
-    public void onOptionClickedDelegate(InventoryClickEvent event, MenuItem clickedOption, Player player)
-    {
-        TaskData newData = switch (event.getClick())
-        {
+    public void onOptionClickedDelegate(InventoryClickEvent event, MenuItem clickedOption, HumanEntity player) {
+        TaskData newData = switch (event.getClick()) {
             case LEFT -> incrementItemCount(clickedOption, 1);
             case SHIFT_LEFT -> incrementItemCount(clickedOption, 10);
             case RIGHT -> decrementItemCount(clickedOption, 1);
@@ -49,15 +44,13 @@ public class TaskPickerUI extends PaginatedPickerMenu
         };
     }
 
-    public TaskData incrementItemCount(MenuItem item, int by)
-    {
+    public TaskData incrementItemCount(MenuItem item, int by) {
         // When entering this method, the item always needs to be selected by the end.
         // Now just check if the item was already selected prior to this moment.
         boolean alreadySelected = getSelectedItems().contains(item);
 
         int newAmount = item.getAmount();
-        if (alreadySelected)
-        {
+        if (alreadySelected) {
             newAmount = Math.min(64, newAmount + by);
             if (newAmount == item.getAmount())
                 return null;
@@ -72,24 +65,20 @@ public class TaskPickerUI extends PaginatedPickerMenu
         return newData;
     }
 
-    public TaskData decrementItemCount(MenuItem item, int by)
-    {
+    public TaskData decrementItemCount(MenuItem item, int by) {
         // When entering this method the item could already be deselected, in which case we return;
         boolean deselect = false;
-        if (!getSelectedItems().contains(item))
-        {
+        if (!getSelectedItems().contains(item)) {
             return null;
         }
 
         // If the item is selected and its amount is set to 1 prior to this, then deselect it
-        if (item.getAmount() == 1)
-        {
+        if (item.getAmount() == 1) {
             deselect = true;
         }
 
         int newAmount = item.getAmount();
-        if (!deselect)
-        {
+        if (!deselect) {
             newAmount = Math.max(1, newAmount - by);
         }
 
@@ -103,28 +92,23 @@ public class TaskPickerUI extends PaginatedPickerMenu
     }
 
     @Override
-    public void handleOpen(final InventoryOpenEvent event)
-    {
-        super.handleOpen(event);
+    public void beforeOpening(HumanEntity player) {
+        super.beforeOpening(player);
 
-        BingoCardsData cardsData = new BingoCardsData();
+        BingoCardData cardsData = new BingoCardData();
         Set<TaskData> tasks = cardsData.lists().getTasks(listName, true, true);
 
-        for (MenuItem item : getItems())
-        {
+        for (MenuItem item : getItems()) {
             TaskData itemData = BingoTask.fromStack(item).data;
             boolean save = false;
-            for (var savedTask : tasks)
-            {
-                if (savedTask.isTaskEqual(itemData))
-                {
+            for (var savedTask : tasks) {
+                if (savedTask.isTaskEqual(itemData)) {
                     save = true;
                     break;
                 }
             }
 
-            if (save)
-            {
+            if (save) {
                 int count = 1;
                 if (itemData instanceof CountableTask countable)
                     count = countable.getCount();
@@ -137,18 +121,16 @@ public class TaskPickerUI extends PaginatedPickerMenu
     }
 
     @Override
-    public void handleClose(InventoryCloseEvent event)
-    {
-        super.handleClose(event);
+    public void beforeClosing(HumanEntity player) {
+        super.beforeClosing(player);
 
-        BingoCardsData cardsData = new BingoCardsData();
+        BingoCardData cardsData = new BingoCardData();
         cardsData.lists().saveTasksFromGroup(listName,
-                getItems().stream().map(item -> BingoTask.fromStack(item).data).toList(),
-                getSelectedItems().stream().map(item -> BingoTask.fromStack(item).data).toList());
+                getItems().stream().map(item -> BingoTask.fromStack(item).data).collect(Collectors.toList()),
+                getSelectedItems().stream().map(item -> BingoTask.fromStack(item).data).collect(Collectors.toList()));
     }
 
-    public static List<MenuItem> asPickerItems(List<BingoTask> tasks)
-    {
+    public static List<MenuItem> asPickerItems(List<BingoTask> tasks) {
         List<MenuItem> result = new ArrayList<>();
         tasks.forEach(task -> {
             MenuItem item = new MenuItem(getUpdatedTaskItem(task.data, false, 1));
@@ -158,13 +140,10 @@ public class TaskPickerUI extends PaginatedPickerMenu
         return result;
     }
 
-    private static ItemStack getUpdatedTaskItem(TaskData old, boolean selected, int newCount)
-    {
+    private static ItemStack getUpdatedTaskItem(TaskData old, boolean selected, int newCount) {
         TaskData newData = old;
-        if (selected)
-        {
-            if (newData instanceof CountableTask countable)
-            {
+        if (selected) {
+            if (newData instanceof CountableTask countable) {
                 newData = countable.updateTask(newCount);
             }
         }
@@ -191,15 +170,13 @@ public class TaskPickerUI extends PaginatedPickerMenu
         return item;
     }
 
-    private static ItemText[] createSelectedLore()
-    {
+    private static ItemText[] createSelectedLore() {
         var text = new ItemText(" - ", ChatColor.WHITE, ChatColor.ITALIC);
         text.addText("This task has been added to the list", ChatColor.DARK_PURPLE);
         return new ItemText[]{text};
     }
 
-    private static ItemText[] createUnselectedLore()
-    {
+    private static ItemText[] createUnselectedLore() {
         var text = new ItemText(" - ", ChatColor.WHITE, ChatColor.ITALIC);
         text.addText("Click to make this task", ChatColor.GRAY);
         var text2 = new ItemText("   appear on bingo cards", ChatColor.GRAY, ChatColor.ITALIC);
